--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 node filter=lfs diff=lfs merge=lfs -text
+node_modules/node/bin/node filter=lfs diff=lfs merge=lfs -text
